--- a/contactme.css
+++ b/contactme.css
@@ -36,12 +36,12 @@ li a:active{
 
 table{
     width: 100%;
-    height: 5px
+    height: 5px;
     
     }
 
 th {
-    background-color:#ddd
+    background-color:#ddd;
     } 
 tr {
     color:#0c1e93;
@@ -59,14 +59,14 @@ legend:hover {
 }
 fieldset {
     width:100%;
-    color:#3626a7
+    color:#3626a7;
 }
 fieldset:hover{
     background-color:#e3e3e3;
 }
 
 input {
-    color:#78fecf
+    color:#78fecf;
 }
 
 
