--- a/cv.css
+++ b/cv.css
@@ -26,11 +26,11 @@ li a {
     }
 #skills, #aboutme {
     width: 100%;
-    height: 30px
+    height: 30px;
     }
 
 th {
-    background-color:#ddd
+    background-color:#ddd;
     } 
 tr {
     color:#0c1e93;
