--- a/projects.css
+++ b/projects.css
@@ -26,11 +26,11 @@ li a {
     }
 #skills, #aboutme {
     width: 100%;
-    height: 30px
+    height: 30px;
     }
 
 th {
-    background-color:#ddd
+    background-color:#ddd;
     } 
 tr {
     color:#0c1e93;
@@ -63,14 +63,14 @@ legend:hover {
 }
 fieldset {
     width:100%;
-    color:#3626a7
+    color:#3626a7;
 }
 fieldset:hover{
     background-color:#e3e3e3;
 }
 
 input {
-    color:#78fecf
+    color:#78fecf;
 }
 
 
