--- a/contactme.css
+++ b/contactme.css
@@ -3,8 +3,11 @@
 #headnav {
   font-family:"roboto", serif;
   background-color: lightgrey;
-
 }
+  #mainimage {
+     max-width: 80vmin
+}
+
 ul {
     list-style-type: none;
     margin: 0;
