--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
 #headnav {
   font-family:"roboto", serif;
   background-color: lightgrey;
+#mainimage {
 
+     max-width: 80vmin
 }
 ul {
     list-style-type: none;
