--- a/contactme.css
+++ b/contactme.css
@@ -4,9 +4,9 @@
   font-family:"roboto", serif;
   background-color: lightgrey;
 }
-  #mainimage {
-     max-width: 80vmin
-}
+body {
+   background-image: url("paper.gif");
+} 
 
 ul {
     list-style-type: none;
