--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ h2{
 p3{
     color: #332;
       background-color:#FBFAF9;
-      width"20px;"
+      width:"20px;"
 }
 #footernav{
     display: block;
